[package]
name = "editor"
version = "0.1.1"
edition = "2021"
authors = ["Sol Midnight <sol.midnight@blockglow.com>"]
description = "Terminal editor thing. Does not work yet."
repository = "https://github.com/blockglow/editor"
license = "MIT"

[dependencies]
crossterm = "0.27.0"
derive_more = "0.99.18"
glam = "0.28.0"
